--- a/m1/w1/d4/esercitazione 26.10/style.css
+++ b/m1/w1/d4/esercitazione 26.10/style.css
@@ -2,7 +2,7 @@
     color:red;
 }
 
-#maiuscolo {
+.maiuscolo {
     text-transform: uppercase;
 }
 
@@ -11,9 +11,9 @@
 }
 
 
-.verde {
+.header {
     color: rgb(29, 149, 151);
-    background-color: rgb(249, 234, 146);
+    background-color: rgb(253, 243, 186);
 }
 
 #ridimensiona {
@@ -26,4 +26,21 @@
 
 #second-font {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+body {
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+p, li {
+    font-family: Arial, Helvetica, sans-serif ;
+}
+
+li {
+    line-height: 38px;
+}
+
+#centro {
+    text-align: center;
 }
