--- a/m1/w1/d5/esercitazione 27.10/style.css
+++ b/m1/w1/d5/esercitazione 27.10/style.css
@@ -1,9 +1,14 @@
 body {
     margin-left: 35%;
     margin-right: 35%;
-    background-image: url(../img/sfondo.png)
+    max-width: 100%;
+    background-image: url(img/sfondo.png)
     font-family 'Poppins', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.1rem;
+}
+
+.dimensione {
+    max-width: 100%;
 }
 
 .border-padding {
@@ -12,7 +17,6 @@ body {
     border-width: 3px;
     padding: 10px;
 }
-
 
 .maiuscolo {
     text-transform: uppercase;
@@ -75,4 +79,23 @@ tr {
 thead, tfoot {
     width: 50px;
     height: 50px;
+}
+
+form {
+    background-color: rgb(202, 202, 202);
+    padding: 3px;
+}
+
+button {
+    background-color: rgba(28, 58, 206, 0.759);
+    border-color: transparent;
+}
+
+.sfondo-grigio {
+    background-color: rgb(202, 202, 202);
+    padding: 3px;
+}
+
+footer {
+    background-color: rgba(47, 47, 230, 0.236);
 }
