--- a/m1/w1/d5/progetto settimanale 27.10/mobile/style.css
+++ b/m1/w1/d5/progetto settimanale 27.10/mobile/style.css
@@ -6,20 +6,24 @@ body {
     line-height: 1.65;
 }
 
+/*background logo*/
 .sfondo-nero {
     background-color: black;
 }
 
+/*posizionamento logo*/
 #immagine-1 {
     width: 150px;
     padding-top: 25px;
     padding-bottom: 30px;
 }
 
+/*colore headings*/
 .blu {
     color:#25a2c3;
 }
 
+/*stile primo h1 pagina*/
 #font-h1 {
     font-size: 3rem;
     font-family: 'Montserrat', sans-serif;
@@ -30,19 +34,22 @@ body {
     font-weight: bold;
 }
 
+/*stile immagine opaca*/
 .sfondo-immagine {
-    background-image: url(images/banner.jpg);
+    background-image: url(/images/banner.jpg);
     background-size: cover;
     background-position: center;
     padding-top: 50px;
     padding-bottom: 50px;
 }
 
+/*padding per alcuni paragrafi*/
 .padding {
     padding-right: 15%;
     padding-left: 15%;
 }
 
+/*margine per spazio tra headings e paragrafi*/
 .margin-b {
     margin-bottom: 25px;
 }
@@ -51,6 +58,7 @@ body {
     text-transform: uppercase;
 }
 
+/*stile link bottone pagina */
 .button {
     background-color: #f04c2f;
     border:solid;
@@ -60,6 +68,7 @@ body {
     text-decoration: none;
 }
 
+/*font link bottone pagina*/
 #font-button {
     font-family: 'Montserrat', sans-serif;
     color: white;
@@ -70,12 +79,14 @@ body {
     font-size: 1.5rem;
 }
 
+/*padding per altri paragrfi*/
 .padding1 {
     padding-right: 10%;
     padding-left: 10%;
     margin-bottom: 20px;
 }
 
+/*stile immagine nel cerchio*/
 #img-cerchio {
     border-radius: 50%;
     width: 300px;
@@ -85,12 +96,14 @@ body {
     color: white;
 }
 
+/*background testimonianza*/
 .sfondo-arancione {
     background-color: #e22d0e;
     padding-top: 50px;
     padding-bottom: 50px;
 }
 
+/*headings testimonianza e contattami*/
 #epi-gar, #contact {
     font-size: 2.5rem;
 }
@@ -99,6 +112,7 @@ body {
     font-style: italic;
 }
 
+/*font cite*/
 #ceo {
     font-size: 1.6rem;
 }
@@ -108,6 +122,7 @@ body {
     font-size: 1.2rem
 }
 
+/*stile bordi dei box*/
 .border {
     border: solid;
     border-width: 1px;
@@ -115,8 +130,10 @@ body {
     padding: 2px;
 }
 
+/*stile immagini box*/
 .w-img {
-    width: 100%;
+   width: 430px;
+   padding-top: 20px;
 }
 
 #background-footer {
@@ -125,6 +142,7 @@ body {
     padding-bottom: 80px;
 }
 
+/*gestione icone fontawesome*/
 #d-block, #d-block2 {
     display: block;
 }
@@ -137,3 +155,6 @@ hr {
     width: 180px;
 }
 
+a:hover {
+    color:rgb(249, 78, 255)
+}
